Use daq-as-service only

--- a/topo/fot/forch/forch.yaml
+++ b/topo/fot/forch/forch.yaml
@@ -20,6 +20,7 @@ orchestration:
     port_description: TAP
     sequester_timeout_sec: 360
     auto_sequestering: disabled
+    service_address: 127.0.0.1
     test_result_device_states:
       - test_result: FAILED
         device_state: infracted
