--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,6 +28,14 @@ jobs:
         run: bin/retry_cmd bin/build_docker controller
       - name: run python tests
         run: testing/python_test test_fot
+      - name: setup fot stack
+        run: bin/setup_stack devices 5 skip-conn-check dhcp fot
+      - name: run fot integration tests
+        run: timeout 20m bin/run_test_set fot
+      - name: setup vxlan stack
+        run: bin/setup_stack devices 5 skip-conn-check dhcp fot vxlan
+      - name: run vxlan integration tests
+        run: timeout 20m bin/run_test_set fot
       - name: post-run logs
         if: ${{ always() }}
         run: |
