--- a/topo/fot/forch/faucet.yaml
+++ b/topo/fot/forch/faucet.yaml
@@ -26,6 +26,9 @@ dps:
         description: "to t2sw3 port 50"
         stack: {dp: nz-kiwi-t2sw3, port: 50}
         acls_in: [mirror-port]
+      12:
+        description: MIRROR
+        output_only: true
       28:
         description: egress
         lacp: 3
@@ -59,6 +62,9 @@ dps:
         description: "to t2sw3 port 52"
         stack: {dp: nz-kiwi-t2sw3, port: 52}
         acls_in: [mirror-port]
+      12:
+        description: MIRROR
+        output_only: true
       28:
         description: egress
         lacp: 3
