--- a/topo/fot/forch/faucet.yaml
+++ b/topo/fot/forch/faucet.yaml
@@ -9,7 +9,7 @@ dps:
     interfaces:
       4:
         description: TAP
-        output_only: true
+        tagged_vlans: [171]
       6:
         description: "to t1sw2 port 6"
         stack: {dp: nz-kiwi-t1sw2, port: 6}
@@ -45,7 +45,7 @@ dps:
     interfaces:
       4:
         description: TAP
-        output_only: true
+        tagged_vlans: [171]
       6:
         description: "to t1sw1 port 6"
         stack: {dp: nz-kiwi-t1sw1, port: 6}
