--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,6 +62,7 @@ jobs:
         run: |
           bin/setup_remote faucet
           bin/setup_remote daq
+          (cd daq; dts/build_dts)
       - name: build docker
         run: bin/retry_cmd bin/build_docker controller
       - name: run python tests
