--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -62,7 +62,7 @@ jobs:
         run: |
           bin/setup_remote faucet
           bin/setup_remote daq
-          (cd daq; dts/build_dts)
+          bin/build_dts
       - name: build docker
         run: bin/retry_cmd bin/build_docker controller
       - name: run python tests
@@ -74,6 +74,10 @@ jobs:
       - name: setup vxlan stack
         run: bin/setup_stack devices 5 skip-conn-check dhcp fot vxlan
       - name: run vxlan integration tests
+        run: timeout 20m bin/run_test_set fot
+      - name: setup dts
+        run: bin/setup_stack devices 5 skip-conn-check dhcp fot dts localhost
+      - name: run dts integration tests
         run: timeout 20m bin/run_test_set fot
       - name: post-run logs
         if: ${{ always() }}
