Mirror packets to TAP port to send to controller (#322)

--- a/topo/fot/forch/faucet.yaml
+++ b/topo/fot/forch/faucet.yaml
@@ -25,9 +25,6 @@ dps:
         description: "to t2sw3 port 50"
         stack: {dp: nz-kiwi-t2sw3, port: 50}
         acls_in: [mirror-port]
-      12:
-        description: MIRROR
-        output_only: true
       28:
         description: egress
         lacp: 3
@@ -60,9 +57,6 @@ dps:
         description: "to t2sw3 port 52"
         stack: {dp: nz-kiwi-t2sw3, port: 52}
         acls_in: [mirror-port]
-      12:
-        description: MIRROR
-        output_only: true
       28:
         description: egress
         lacp: 3
@@ -134,4 +128,5 @@ acls:
   - rule:
       actions:
         allow: true
-        mirror: 12
+        output:
+          port: 4
