--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -148,8 +148,8 @@ jobs:
         run: bin/dump_logs full
 
   test_scale:
-    runs-on: ubuntu-20.04
-    timeout-minutes: 25
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
     steps:
       - uses: actions/checkout@v2
       - name: Set up python 3.8
