--- a/etc/Dockerfile.faucet
+++ b/etc/Dockerfile.faucet
@@ -5,6 +5,13 @@ FROM faucet/python3:5.0.1
 RUN apk add -q tcpdump iptables sudo linux-headers build-base
 
 COPY faucet/ /faucet-src/
+
+# Workaround for numpy/alpine dependency problem.
+RUN sed -i 's/networkx>=1.9/networkx<=2.2/' /faucet-src/requirements.txt
+
+# We don't need no stinkin' unit-tests...
+RUN sed -i 's/.*unit.*//' /faucet-src/docker/install-faucet.sh
+
 RUN /faucet-src/docker/install-faucet.sh && rm -rf /faucet-src/.git
 
 # Check for target executable since installer doesn't error out properly.
