Feature/custom faux mac prefix (#329)

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -73,15 +73,15 @@ jobs:
       - name: run python tests
         run: testing/python_test test_fot
       - name: setup fot stack
-        run: bin/setup_stack devices 5 skip-conn-check dhcp fot
+        run: bin/setup_stack devices 5 faux-mac-prefix "9a:99:57:1e" skip-conn-check dhcp fot
       - name: run fot integration tests
         run: timeout 20m bin/run_test_set fot
       - name: setup vxlan stack
-        run: bin/setup_stack devices 5 skip-conn-check dhcp fot vxlan
+        run: bin/setup_stack devices 5 faux-mac-prefix "9a:99:57:1e" skip-conn-check dhcp fot vxlan
       - name: run vxlan integration tests
         run: timeout 20m bin/run_test_set fot
       - name: setup dts
-        run: bin/setup_stack devices 5 skip-conn-check dhcp fot dts localhost
+        run: bin/setup_stack devices 5 faux-mac-prefix "9a:99:57:1e" skip-conn-check dhcp fot dts localhost
       - name: run dts integration tests
         run: timeout 20m bin/run_test_set fot
       - name: post-run logs
