Adding manual fot mode

--- a/topo/fot/forch/behaviors.yaml
+++ b/topo/fot/forch/behaviors.yaml
@@ -8,9 +8,9 @@ device_mac_behaviors:
   "9a:02:57:1e:8f:03":
     segment: INFRA
     auto_sequestering: enabled
-    manual_sequestering_timestamp: "2021-07-15T18:31:12"
   "9a:02:57:1e:8f:04":
     segment: INFRA
+    scheduled_sequestering_timestamp: "REPLACE_WITH_TIMESTAMP"
   "9a:02:57:1e:8f:05":
     segment: INFRA
     auto_sequestering: enabled
