Change ignore syntax

--- a/.stickler.yml
+++ b/.stickler.yml
@@ -3,19 +3,13 @@ linters:
   flake8:
     python: 3
     max-line-length: 100
-    ignore:
-      - 'E701'
+    ignore: E701
   pep8:
     python: 3
     max-line-length: 100
-    ignore:
-      - 'E701'
+    ignore: E701
   py3k:
-    ignore:
-      - 'W1618'
-      - 'W1619'
-      - 'E1601'
-      - 'E701'
+    ignore: W1618, W1619, E1601, E701
 files:
   ignore:
     - 'forch/proto/*'
