--- a/.stickler.yml
+++ b/.stickler.yml
@@ -1,9 +1,11 @@
 ---
 linters:
   flake8:
+    ignore: E701
     python: 3
     max-line-length: 100
   pep8:
+    ignore: E701
     python: 3
     max-line-length: 100
   py3k:
