Add GIT_URL to fot dts

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -67,6 +67,8 @@ jobs:
           bin/setup_remote faucet
           bin/setup_remote daq
       - name: build docker
+        env:
+          GIT_URL: ${{ secrets.GIT_URL }}
         run: |
           bin/retry_cmd bin/build_docker controller
           bin/build_dts
