--- a/etc/Dockerfile.controller
+++ b/etc/Dockerfile.controller
@@ -31,7 +31,7 @@ RUN bin/install_faucet && rm -rf faucet/.git
 
 COPY controller/bin/install_forch bin/
 COPY . forch/
-RUN bin/install_forch && rm -rf forch/.git
+RUN rm -rf forch/venv && bin/install_forch && rm -rf forch/.git
 
 COPY daq/ daq/
 RUN daq/bin/setup_dev simple && rm -rf daq/.git
