--- a/controller/bin/daq_config.yaml
+++ b/controller/bin/daq_config.yaml
@@ -4,6 +4,8 @@ include: ${DAQ_LIB}/config/system/default.yaml
 
 base_conf: ${DAQ_LIB}/resources/setups/orchestration/base_config.json
 
+host_tests: ${DAQ_LIB}/config/modules/dts.conf
+
 switch_setup:
   lo_port: 3984
   varz_port: 5678
