--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -82,14 +82,17 @@ jobs:
       - name: run python tests
         run: testing/python_test test_fot
       - name: run fot integration tests
+        if: ${{ always() }}
         run: |
           bin/setup_stack devices 5 faux-mac-prefix "9a:99:57:1e" skip-conn-check dhcp fot
           timeout 15m bin/run_test_set fot
       - name: run vxlan integration tests
+        if: ${{ always() }}
         run: |
           bin/setup_stack devices 5 faux-mac-prefix "9a:99:57:1e" skip-conn-check dhcp fot vxlan
           timeout 15m bin/run_test_set fot
       - name: run dts integration tests
+        if: ${{ always() }}
         run: |
           bin/setup_stack devices 5 faux-mac-prefix "9a:99:57:1e" skip-conn-check dhcp fot dts localhost
           timeout 15m bin/run_test_set fot
