--- a/debian/control
+++ b/debian/control
@@ -23,8 +23,8 @@ Vcs-Browser: https://github.com/faucetsdn/forch
 
 Package: python3-forch
 Architecture: all
-Depends: python3-faucet (= FAUCET_VERSION),
-         python3-all (>= 3.8),
+Depends: python3-all (>= 3.8),
+         python3-faucet (= 1.9.54.2),
          python3-grpcio,
          python3-netaddr,
          python3-networkx,
