--- a/debian/control
+++ b/debian/control
@@ -32,7 +32,7 @@ Depends: python3-faucet (= FAUCET_VERSION),
          python3-protobuf,
          python3-psutil,
          python3-watchdog,
-         python3-yaml,
+         python3-yaml (>= 5.4.1), python3-yaml (<< 6.0),
 Description: The Faucet Orchestrator for controlling and monitoring a faucet network.
 
 Package: forch
