--- a/etc/Dockerfile.controller
+++ b/etc/Dockerfile.controller
@@ -25,11 +25,11 @@ RUN $AG update && $AG install ash iptables sudo openvswitch-switch openvswitch-c
 RUN update-alternatives --install /usr/bin/python3 python /usr/bin/python3.8 2
 
 
-COPY controller/bin/install_faucet bin/
+COPY controller/bin/ bin/
+
 COPY faucet/ faucet/
 RUN bin/install_faucet && rm -rf faucet/.git
 
-COPY controller/bin/install_forch bin/
 COPY . forch/
 RUN rm -rf forch/venv && bin/install_forch && rm -rf forch/.git
 
