--- a/radius_server/Dockerfile.freeradius
+++ b/radius_server/Dockerfile.freeradius
@@ -1,4 +1,10 @@
-FROM ubuntu:20.10
+FROM ubuntu:20.04
+
+ENV TZ=America/Los_Angeles
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
+
+RUN apt update
+RUN apt install -y tzdata
 
 RUN apt-get update && \
     apt-get install -y freeradius iproute2 vim sudo tcpdump iputils-ping
