--- a/radius_server/Dockerfile.freeradius
+++ b/radius_server/Dockerfile.freeradius
@@ -4,10 +4,7 @@ ENV TZ=America/Los_Angeles
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt-get update && \
-    apt-get install -y tzdata
-
-RUN apt-get update && \
-    apt-get install -y freeradius iproute2 vim sudo tcpdump iputils-ping
+    apt-get install -y freeradius iproute2 vim sudo tcpdump iputils-ping tzdata
 
 USER root
 
